--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
-input::-webkit-inner-spin-button {
+input[type="number"]::-webkit-inner-spin-button {
     appearance: none;
 }
