--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+html {
+    scroll-behavior: smooth;
+}
+
+.section {
+    scroll-margin-top: 180px;
+}
+
 input[type="number"]::-webkit-inner-spin-button {
     appearance: none;
 }
