Skoro fix scroll headeru do sekcí a přidání správně žluté barvy do podstránky /zakazky.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,11 @@ html {
 }
 
 .section {
-    scroll-margin-top: 180px;
+    scroll-margin-top: 144.04px;
+}
+
+.current-section {
+    scroll-margin-top: 275px;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
