--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,24 @@
 @import "tailwindcss";
 
 html {
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
+    scroll-behavior: auto !important;
+    scroll-padding-top: var(--header-height);
 }
 
+/*
 .section {
     scroll-margin-top: 144.04px;
 }
 
 .current-section {
-    scroll-margin-top: 275px;
+    scroll-margin-top: calc(var(--header-height) + 15px);
 }
+
+.about-section {
+    scroll-margin-top: calc(var(--header-height) + 50px);
+}
+*/
 
 input[type="number"]::-webkit-inner-spin-button {
     appearance: none;
