--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: inherit !important;
     /* scroll-padding-top: var(--header-height); */
 }
 
