--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,10 @@
 
 html {
     scroll-behavior: auto !important;
-    /* scroll-padding-top: var(--header-height); */
+}
+
+.current-section {
+    scroll-margin-top: calc(var(--header-height) + 15px);
 }
 
 /*
