--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@ html {
     scroll-behavior: auto !important;
 }
 
-.current-section {
+/* .current-section {
     scroll-margin-top: calc(var(--header-height) + 15px);
-}
+} */
 
 /*
 .section {
